# CoLlAGeSlicerExtension

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml
CLIModule_ColiageFilter/: CLIModule_ColiageFilter.cxx  CLIModule_ColiageFilter.rar  CLIModule_ColiageFilter.xml  CMakeLists.txt  ccipdCastImage.hxx  ccipdCodeOptions.h  ccipdCollage2D.hxx  ccipdCore.h  ccipdDuplicateITKImage.hxx  ccipdGetChannelByIndex.hxx  ccipdGetTFHaralick2.hxx  ccipdITKForwardDeclarations.h  ccipdInsertImage.hxx  ccipdMacros.h  ccipdMatrixTypes.h  ccipdRescaleImage.hxx  ccipdRoundITKImage.hxx  ccipdSliceTypes.h  ccipdStdVectorUtils.hxx  ccipdVolumeTypes.h
CLIModule_ColiageFilter/Data/Baseline/: baselineColiage_h0_rad1_slice1.mha  baselineColiage_h0_rad1_slice1.mha.md5  baselineColiage_h0_rad1_slice2.mha  baselineColiage_h0_rad1_slice2.mha.md5  baselineColiage_h0_rad2_slice1.mha  baselineColiage_h0_rad2_slice1.mha.md5  baselineColiage_h0_rad2_slice2.mha  baselineColiage_h0_rad2_slice2.mha.md5  baselineColiage_h0_rad3_slice1.mha  baselineColiage_h0_rad3_slice1.mha.md5  baselineColiage_h0_rad3_slice2.mha  baselineColiage_h0_rad3_slice2.mha.md5  baselineColiage_h0_rad4_slice1.mha  baselineColiage_h0_rad4_slice1.mha.md5  baselineColiage_h0_rad4_slice2.mha  baselineColiage_h0_rad4_slice2.mha.md5  baselineColiage_h0_rad5_slice1.mha  baselineColiage_h0_rad5_slice1.mha.md5  baselineColiage_h0_rad5_slice2.mha  baselineColiage_h0_rad5_slice2.mha.md5
CLIModule_ColiageFilter/Data/Input/: Image_slice1.mha  Image_slice1.mha.md5  Image_slice2.mha  Image_slice2.mha.md5  Mask_slice1.mha  Mask_slice1.mha.md5  Mask_slice2.mha  Mask_slice2.mha.md5  input_01_SliceImage.mha  input_01_SliceMask.mha  output_1_SliceImage.mha
LoadableModule_ColiageFilter/: CMakeLists.txt  qSlicerLoadableModule_ColiageFilterModule.cxx  qSlicerLoadableModule_ColiageFilterModule.h  qSlicerLoadableModule_ColiageFilterModuleWidget.cxx  qSlicerLoadableModule_ColiageFilterModuleWidget.h
LoadableModule_ColiageFilter/Logic/: vtkSlicerLoadableModule_ColiageFilterLogic.cxx  vtkSlicerLoadableModule_ColiageFilterLogic.h
LoadableModule_ColiageFilter/Resources/: qSlicerLoadableModule_ColiageFilterModule.qrc
LoadableModule_ColiageFilter/Resources/UI/: qSlicerLoadableModule_ColiageFilterFooBarWidget.ui  qSlicerLoadableModule_ColiageFilterModuleWidget.ui
LoadableModule_ColiageFilter/Widgets/: qSlicerLoadableModule_ColiageFilterFooBarWidget.cxx  qSlicerLoadableModule_ColiageFilterFooBarWidget.h
ScriptedModule_ColiageFilter/: CMakeLists.txt  ScriptedModule_ColiageFilter.py
